--- a/finalTOCR.ipynb
+++ b/finalTOCR.ipynb
@@ -11,25 +11,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "updates done from previous part:\n",
-        "\n",
-        "1.   The details dictonary is updated.\n",
-        "2.   The details is saved into \"./Result/{model_name}.pickle\" file.\n",
-        "3.   The RNN is not being trained in this file instead it uses the trained RNN which are present in \"./trained/{model_name}.h5\" file.\n",
-        "\n",
-        "Issues:\n",
-        "1.   The tokenizer file which is already present is good but else condition which creates the tokenizer file is not good its not generating words its generating sentences.\n",
-        "\n",
-        "Notes:\n",
-        "1.    Write now this is working properly.(dont change anything, check the filepaths)."
-      ],
-      "metadata": {
-        "id": "68C9eSTijnfU"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -134,26 +115,9 @@
       "source": [
         "# Reads an image and returns an image as a 2d numpy array.\n",
         "def read_image(path):\n",
-        "    return np.asarray(Image.open(path).convert('L'))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iKyY3h_8oL8G"
-      },
-      "source": [
-        "Binarization is converting the image pixels to just have values 0 and 1. We have used Otsu's thresholding together with binary."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "E8ZK_ANcoL8G"
-      },
-      "outputs": [],
-      "source": [
+        "    return np.asarray(Image.open(path).convert('L'))\n",
+        "\n",
+        "\n",
         "# Binarizes an image.The input is a 2d numpy array.\n",
         "def Binarize_image(img):\n",
         "    # Apply Gaussian filtering \n",
@@ -190,7 +154,7 @@
       },
       "outputs": [],
       "source": [
-        "# For splitting the image into lines.\n",
+        "# For segmenting the image.\n",
         "\n",
         "# Function for distance\n",
         "def split_lines_d(img):\n",
@@ -256,15 +220,6 @@
         "    stop=i[1]\n",
         "    line_images.append(img[start:stop+1])\n",
         "  return line_images"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L5PLS7dBoL8J"
-      },
-      "source": [
-        "*Word Level Segmentation of line.*"
       ]
     },
     {
